--- a/style.css
+++ b/style.css
@@ -8,23 +8,31 @@
     --grid-cols: 1;
     --grid-rows: 1;
   }
-  
+  body {
+    background: rgb(63,94,251);
+    background: radial-gradient(circle, rgba(63,94,251,1) 0%, rgba(252,70,107,1) 100%);
+  }
+.mt-4 {
+    margin-top: 10px;
+}
+
   #container {
     display: grid;
     grid-template-rows: repeat(var(--grid-rows), 1fr);
     grid-template-columns: repeat(var(--grid-cols), 1fr);
     align-content:center;
-    height: 400px;
-    width: 400px;
+    height: 450px;
+    width: 450px;
     margin: auto;
   }
-  
+ 
   .grid-item {
-    border: 1px solid black;
+    border: 1px solid #540046;
     display: grid;
     align-content: center;
     justify-content: center;
     padding: 2px;
+    background-color: #e6d5e2;
   }
 
   .mbt-4 {
@@ -35,13 +43,88 @@
   .flex {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     gap: 10px;
   }
 
 button {
   padding: 5px;
+  width: 150px;
+  outline: none;
+  border: 3px solid black;
 }
+
 input {
   padding: 1px;
+  width: 150px;
+  outline: none;
+
 }
+
+#btn-restart {
+  background-color: #6a7bfc;
+  transition: 0.5s;
+}
+
+#btn-squares {
+  background-color: #fc47cf;
+  transition: 0.5s;
+}
+
+#btn-restart:hover {
+  transform: scale(1.03);
+  transition: 0.5s;
+}
+
+#btn-squares:hover {
+  transform: scale(1.03);
+  transition: 0.5s;
+}
+
+#btn-rainbow {
+  background: linear-gradient(to right, orange , yellow, green, cyan, blue, violet);
+  transition: 0.5s;
+}
+
+#btn-rainbow:hover {
+  transform: scale(1.03);
+  transition: 0.5s;
+}
+
+#btn-black {
+  background-color: black;
+  color: white;
+  border: 3px solid white;
+  transition: 0.5s;
+}
+
+#btn-black:hover {
+  transform: scale(1.03);
+  transition: 0.5s;
+}
+
+
+.ml-5 {
+  margin-left: 200px;
+}
+
+.mr-5 {
+  margin-right: 200px;
+}
+
+
+
+input[type="color"] {
+	-webkit-appearance: none;
+	width: 150px;
+  border: 2px solid white;
+	height: 32px;
+}
+input[type="color"]::-webkit-color-swatch-wrapper {
+	padding: 0;
+}
+input[type="color"]::-webkit-color-swatch {
+	border: none;
+}
+
+.rainbow
